--- a/SI_Policy/component.yaml
+++ b/SI_Policy/component.yaml
@@ -50,7 +50,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      cloud.gov operators and SecOps teams employ automated mechanisms [Assignment: organization-defined frequency] to determine the state of information system components with regard to flaw remediation.
+      cloud.gov operators and SecOps teams employ automated mechanisms daily to determine the state of information system components with regard to flaw remediation.
   parameters:
     # [Assignment: organization-defined frequency]
     - key: SI-2 (2)
@@ -203,6 +203,7 @@ satisfies:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
+    # Need to add how often we check for unusual traffic or conditions
   - text: |
       cloud.gov monitors inbound and outbound communications traffic [FedRAMP Assignment: continually] for unusual or unauthorized activities or conditions.
   standard_key: NIST-800-53
@@ -212,9 +213,9 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      cloud.gov alerts [Assignment: organization-defined personnel or roles] when
+      cloud.gov alerts SecOps when
       the following indications of compromise or potential compromise occur:
-      [Assignment: organization-defined compromise indicators].
+      malicious code, file integrity, and network traffic.
   standard_key: NIST-800-53
 - control_key: SI-4 (14)
   covered_by:
@@ -239,7 +240,8 @@ satisfies:
   narrative:
   - key: a
     text: |
-      18F implements Grafana [Assignment: organization-defined host-based monitoring mechanisms] on cloud.gov [Assignment: organization-defined information system components].  standard_key: NIST-800-53
+      18F implements Riemann for host based monitoring for all server metrics on cloud.gov.  
+  standard_key: NIST-800-53
 - control_key: SI-5
   covered_by:
   - verification_key: POLICY_DOC
@@ -247,7 +249,7 @@ satisfies:
   narrative:
     - key: a
       text: |
-        18F receives information system security alerts, advisories, and directives from [Assignment: organization-defined external organizations] on an ongoing basis;
+        18F receives information system security alerts, advisories, and directives from US-CERT on an ongoing basis;
     - key: b
       text: |
         18F generates internal security alerts, advisories, and directives as deemed necessary;
@@ -269,8 +271,7 @@ satisfies:
   narrative:
     - key: a
       text: |
-        Verifies the correct operation of [Assignment: organization-defined security
-        functions];
+        cloud.gov verifies the correct operation of services that detect malicious code, viruses, file integrity, network traffic, and security compliance of the OS using a contious integration tool called concourse.   
     - key: b
       text: |
         Performs this verification [FedRAMP Assignment: to include upon system startup
@@ -290,8 +291,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      18F employs Tripwire to detect unauthorized changes to [Assignment:
-      organization-defined software, firmware, and information].
+      18F employs Tripwire to detect unauthorized changes to cloud.gov applications.
   standard_key: NIST-800-53
 - control_key: SI-7 (1)
   covered_by:
@@ -329,7 +329,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |
-      The organization centrally manages spam protection mechanisms.
+      cloud.gov centrally manages spam protection mechanisms.
   standard_key: NIST-800-53
 - control_key: SI-8 (2)
   covered_by:
