Making references to the ops team consistent to reduce confusion

--- a/SA_Policy/component.yaml
+++ b/SA_Policy/component.yaml
@@ -47,13 +47,13 @@ satisfies:
       Once development is complete, a team member submits the code to our version control system as a "pull request", where at least one other team member further reviews it before merging it into the code base.  The team then deploys new features into our staging area where they undergo further security review and stakeholder acceptance testing, as well as automated acceptance tests.
   - key: b
     text: |
-      The cloud.gov operation team is broken into several sub-teams with different areas of responsibility and expertise.   Security is a foremost concern for members of all teams.  The cloud.gov operators is primarily focused on implementing security policies at the platform level.
+      The cloud.gov operations team is broken into several sub-teams with different areas of responsibility and expertise.   Security is a foremost concern for members of all teams.  The cloud.gov operations team is primarily focused on implementing security policies at the platform level.
   - key: c
     text: |
-      Each member of the cloud.gov operators have the necessary security background to properly handle sensitive data, such as security keys and certificates, and to evaluate the security implications associated with configuration changes. The cloud.gov operators controls access to cloud.gov and its components through the access control tools appropriate for its components, including AWS security groups, Cloud Foundry roles, and GitHub team membership.
+      Each member of the cloud.gov operations team has the necessary security background to properly handle sensitive data, such as security keys and certificates, and to evaluate the security implications associated with configuration changes. The cloud.gov operations team controls access to cloud.gov and its components through the access control tools appropriate for its components, including AWS security groups, Cloud Foundry roles, and GitHub team membership.
   - key: d
     text: |
-      The cloud.gov operators team continually monitors the configurations of the various components of cloud.gov to ensure they meet the requirements for protecting sensitive data.
+      The cloud.gov operations team continually monitors the configurations of the various components of cloud.gov to ensure they meet the requirements for protecting sensitive data.
   standard_key: NIST-800-53
   # parameters TODO
 - control_key: SA-4
