port au control from .docx

--- a/AU_Policy/component.yaml
+++ b/AU_Policy/component.yaml
@@ -59,24 +59,29 @@ satisfies:
 - control_key: AU-3 (1)
   covered_by: []
   implementation_status: none
+
   narrative:
     - text: |
-        The cloud.gov system includes more detailed information in the audit events
-        identified by type, location or subject. The Loggregator component of cloud.gov
-        produces additional information based on the log type and origin of the logs.
+        The Cloud.Gov information system generates audit records containing the following additional information:
+        session, connection, transaction, or activity duration; for client-server transactions, the number of bytes received
+        and bytes sent; additional informational messages to diagnose or identify the event; characteristics that describe or
+        identify the object or resource being acted upon.
 
-        There are six log types within cloud.gov:
+        Cloudtrail can generate a subset of audit records containing additional information within the AWS infrastructure.
 
-        - API - logs all API calls from a user
-        - STG - logs when staging or restaging an app
-        - DEA - logs when the Droplet excution agent starts and stops an app
-        - RTR - logs when it routes HTTP requests to the application
-        - LGR - logs when there are problems with the logging process itself
-        - APP - logs all application data based on choices by the developer
+        EC2:
+        - Security Groups, Security Group Rules, Key Pairs, AMIs, Spot Instances, Reserved Instance, Instances, Volumes,
+        Snapshots, Placement Groups, Elastic Load Balancers (including attaching or detaching instances to them),
+        Network Interfaces, Elastic IPs
+        IAM:
+          - Account Aliases, Account Summaries, Access Keys, MFA Devices, Policies, Password Policies, Groups, Users
+        S3:
+          - Bucket Logging, Logging Target Bucket, Bucket Logging Prefix, Bucket Website Enabled, Bucket Website Index Document,
+          Bucket Website Error Document, Bucket Notifications Enabled, Public Buckets, Bucket Notifications, Bucket Lifecycle Rules,
+          Bucket Permissions
 
-         All of the audit logs from cloud.gov are drained to the
-         ELK Stack which has even more versitility in producing additional audit capabilities
-         for the 18FDevOps and SecOps team for reivew.
+        Cloud.Gov can generate additional audit information such as
+        - remote_addr, remote_user, request_status, bytes_sent, http_referer, http_user_agent, gzip_ratio
   standard_key: NIST-800-53
 - control_key: AU-4
   covered_by: []
